<resources>
    <string name="app_name">Safeme</string>
    <string name="username_hint">Enter Mobile Number</string>
    <string name="pasword_hint">Enter 4 digit password</string>
    <string name="Login">Login</string>
    <string name="register">New User?? Clik Here</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter E-Mail ID</string>
    <string name="mob_number">Ener your Mobile Number</string>
    <string name="password_hint">Create 4 Digit password</string>
    <string name="reenter_pwd">Reenter 4 digit password</string>
    <string name="register_button">Register</string>
    <string name="flood_prediction">Flood Prediction</string>
    <string name="title_activity_end_user_home">Map</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Request to access location</string>
    <string name="ok">OK</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_hint">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="doctor">Doctor</string>
    <string name="volunteer">Want to be volunteer?</string>
    <string name="title_activity_user_home">user_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flood and Storm management</string>
    <string name="nav_header_subtitle">codebreakers.ibm@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sos_text">SOS</string>
    <string name="feed_text">Feed</string>
    <string name="tools">Tools</string>
    <string name="safe_text">I\'m Safe here</string>
    <string name="notsafe_text">Please help.. I\'m Here</string>
    <string name="update_status">Update my Status</string>
    <string name="find_text">Want to find your dear once?? Click here</string>
    <string name="police_text">Call Police</string>
    <string name="ambulance_text">Call Ambulance</string>
    <string name="firebrigade_text">Call FireBrigade</string>
    <string name="request_hint">Enter your request here..</string>
    <string name="send_request">Send Request</string>
    <string name="track">Track Previous Request</string>
    <string name="localPort">Local Port</string>
    <string name="iPHint">IP</string>
    <string name="portHint">Enter Port Number</string>
    <string name="connect">Connect</string>
    <string name="Disconnect">Disconnect</string>
    <string name="phone_voip_incompatible">Error</string>

    <string name="title_activity_fullscreen"></string>
    <string name="dummy_button"></string>
    <string name="dummy_content"></string>

</resources>
