<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            tools:hint="@string/name_hint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:layout_below="@+id/name"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mob_number"
            android:layout_below="@+id/email"
            android:inputType="phone" />

        <Button
            android:id="@+id/get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobile_number"
            android:layout_marginLeft="125dp"
            android:text="@string/get_otp" />

        <EditText
            android:id="@+id/enter_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_otp_hint"
            android:layout_below="@+id/get_otp"
            android:inputType="number" />

        <Button
            android:id="@+id/verify_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_otp"
            android:text="@string/verify_otp" />

        <CheckBox
            android:id="@+id/doctor_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_otp"
            android:text="@string/doctor" />

        <CheckBox
            android:id="@+id/volunteer_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_input"
            android:text="@string/volunteer" />
        <EditText
            android:id="@+id/password"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="numberPassword"
            android:layout_below="@+id/volunteer_input"/>

        <EditText
            android:id="@+id/repassword"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/reenter_pwd"
            android:layout_below="@+id/password"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:text="@string/register_button"
            android:layout_below="@id/repassword"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>