<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".people_finder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiobutton_group">

            <RadioButton
                android:id="@+id/radioButton_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/safe_text"
                />

            <RadioButton
                android:id="@+id/radioButton2_notsafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notsafe_text"
                android:layout_below="@+id/radioButton_safe"/>

            <Button
                android:id="@+id/button2_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2_notsafe"
                android:layout_marginLeft="100dp"
                android:layout_weight="1"
                android:text="@string/update_status"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="51dp"
                tools:text="@string/update_status" />

            <Button
                android:id="@+id/button3_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButton2_notsafe"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/find_text"
                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="51dp"
                />
        </RadioGroup>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>